update to links

--- a/Landing.html
+++ b/Landing.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consultoría auditoría y asesoría legal y tributaria | PwC Colombia</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <link rel="stylesheet" href="/Styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="/Prueba_pwc/img/favicon.ico">
+    <link rel="stylesheet" href="/Prueba_pwc/Styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script></head>
 <header>
@@ -15,7 +15,7 @@
 
         </div>
         <div>
-            <img src="/img/PwC-logo.svg" alt="Logo_principal">
+            <img src="/Prueba_pwc/img/PwC-logo.svg" alt="Logo_principal">
             <ul>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Productos</a></li>
@@ -41,16 +41,16 @@
 
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="/img/Carrousel/Carrousel_1.png" class="d-block w-100" alt="Carrousel_1">
+                <img src="/Prueba_pwc/img/Carrousel/Carrousel_1.png" class="d-block w-100" alt="Carrousel_1">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="/img/Carrousel/Carrousel_3.png" class="d-block w-100" alt="Carrousel_2">
+                <img src="/Prueba_pwc/img/Carrousel/Carrousel_3.png" class="d-block w-100" alt="Carrousel_2">
               </div>
               <div class="carousel-item">
-                <img src="/img/Carrousel/Carrousel_2.png" class="d-block w-100" alt="Carrousel_3">
+                <img src="/Prueba_pwc/img/Carrousel/Carrousel_2.png" class="d-block w-100" alt="Carrousel_3">
               </div>
               <div class="carousel-item">
-                <img src="/img/Carrousel/Carrousel_4.png" class="d-block w-100" alt="Carrousel_4">
+                <img src="/Prueba_pwc/img/Carrousel/Carrousel_4.png" class="d-block w-100" alt="Carrousel_4">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -80,7 +80,7 @@
 
         <div class="contenedor_blogs">
             <div class="blogs">
-                <img src="/img/Home/Blog_1.webp" class="blog_imagenes" alt="blog_1">
+                <img src="/Prueba_pwc/img/Home/Blog_1.webp" class="blog_imagenes" alt="blog_1">
                 <p class="texto_blogs">
                     COP26, la cumbre de la unión y la materialización de las 
                     acciones para enfrentar el cambio climático
@@ -88,7 +88,7 @@
                 <button class="blog_boton"> Léelo aquí <span> > </span></button>
             </div>
             <div class="blogs">
-                <img src="/img/Home/Blog_2.webp" class="blog_imagenes" alt="blog_2">
+                <img src="/Prueba_pwc/img/Home/Blog_2.webp" class="blog_imagenes" alt="blog_2">
                 <p class="texto_blogs">
                     Los negocios familiares tienen la oportunidad de 
                     liderar en los factores ESG
@@ -96,7 +96,7 @@
                 <button class="blog_boton"> Léelo aquí <span> > </span></button>
             </div>
             <div class="blogs">
-                <img src="/img/Home/Blog_3.webp" class="blog_imagenes" alt="blog_3">
+                <img src="/Prueba_pwc/img/Home/Blog_3.webp" class="blog_imagenes" alt="blog_3">
                 <p class="texto_blogs">
                     Beneficios tributarios establecidos en los Artículos
                     45, 46 y 47 de la Ley 2155 de septiembre 14 de 2021.
@@ -168,7 +168,7 @@
                 <a href="url">Mira cómo La Nueva Ecuación puede darte soluciones</a>    
             </div>
             <div class="contenedor_imagencomunidad">
-                <a href=""><img src="/img/Home/Home_imagen_comunidad.webp" class="imagencomunidad" alt=""></a>
+                <a href=""><img src="/Prueba_pwc/img/Home/Home_imagen_comunidad.webp" class="imagencomunidad" alt=""></a>
             </div>
         </div>
     </section>
@@ -184,7 +184,7 @@
         </div>
 
         <div>
-            <img src="/img/PwC-logo-white.svg" alt="">
+            <img src="/Prueba_pwc/img/PwC-logo-white.svg" alt="">
             <p>
                 © 2023 PwC. PricewaterhouseCoopers. PwC se refiere a las Firmas 
                 colombianas que hacen parte de la red global de PricewaterhouseCoopers
