--- a/login.html
+++ b/login.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | PwC Colombia</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    <link rel="stylesheet" href="/Styles/styles.login.css">
-    <script src="/js/auth.js" crossorigin="anonymous"></script></head>
+    <link rel="icon" type="image/x-icon" href="/Prueba_pwc/img/favicon.ico">
+    <link rel="stylesheet" href="/Prueba_pwc/Styles/styles.login.css">
+    <script src="/Prueba_pwc/js/auth.js" crossorigin="anonymous"></script></head>
 </head>
 <body>
     <section class="signin_section">
@@ -22,7 +22,7 @@
             </div>
           
             <div class="imagen">
-                <img src="/img/Home/Blog_2.webp" class="imagen_inicio" alt="">
+                <img src="/Prueba_pwc/img/Home/Blog_2.webp" class="imagen_inicio" alt="">
             </div>
         </div>
   
