--- a/Landing.html
+++ b/Landing.html
@@ -7,29 +7,35 @@
     <title>Consultoría auditoría y asesoría legal y tributaria | PwC Colombia</title>
     <link rel="icon" type="image/x-icon" href="/Prueba_pwc/img/favicon.ico">
     <link rel="stylesheet" href="/Prueba_pwc/Styles/styles.css">
+    <script src="/Prueba_pwc/js/menu.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script></head>
+</head>
 <header>
-    <section>
-        <div>
-
-        </div>
-        <div>
-            <img src="/Prueba_pwc/img/PwC-logo.svg" alt="Logo_principal">
-            <ul>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Industrias</a></li>
-                <li><a href="#">Publicaciones</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">PwC Insights</a></li>
-                <li><a href="#">Únete a PwC</a></li>
-            </ul>
+    <nav class = "menu">
+        <a href="/Prueba_pwc/Landing.html"><img src="/Prueba_pwc/img/PwC-logo.svg" class="imagen_menu" alt=""></a>
+        <ul class="menu_items" id = "otroModo">
+            <li class="active"><a href="#">Servicios</a></li>
+            <li><a href="#">Productos </a></li>
+            <li><a href="#">industrias</a></li>
+            <li><a href="#">Publicaciones</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">PwC Insights</a></li>
+            <li><a href="#">Únete a PwC</a></li>
             <div>
-                <input type="text" placeholder="Search..">
+                <button class="signin">
+                    Sign in
+                </button>
+                <button class="Register">
+                    Register
+                </button>
             </div>
-        </div>
-    </section>
+
+        </ul>
+        <span class="btn_menu" onclick="showmenu()">
+            <img src="/Prueba_pwc/img/bars-solid.svg" style="width: 1.8rem" alt="" >
+        </span>
+    </nav>
 </header>
 <body>
     <!-- Carrousel Seccion --> 
