--- a/Auditoria.html
+++ b/Auditoria.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <title>Servicios integrales de auditoría y aseguramiento | PwC Colombia</title>
     <link rel="icon" type="image/x-icon" href="/Prueba_pwc/img/favicon.ico">
     <link rel="stylesheet" href="/Prueba_pwc/Styles/styles_auditoria.css">
@@ -40,66 +39,106 @@
 
     <section class="auditoria">
         <div class="audiotoria_arriba">
-            <h1> Servicios de auditoría y aseguramiento PwC </h1>
-            <p>
-                Nuestros procesos de aseguramiento construyen 
-                confianza en la sociedad y aportan el valor que 
-                estás buscando a través del conocimiento y la 
-                experiencia de nuestros profesionales especializados 
-                brindando una auditoría de calidad.
-            </p>
+            <div class="contenedor_arriba">
+                <h1> Servicios de auditoría y aseguramiento PwC </h1>
+                <p>
+                    Nuestros procesos de aseguramiento construyen 
+                    confianza en la sociedad y aportan el valor que 
+                    estás buscando a través del conocimiento y la 
+                    experiencia de nuestros profesionales especializados 
+                    brindando una auditoría de calidad.
+                </p>
+            </div>
         </div>
         <div class="auditoria_abajo">
-            <h2> Permítenos ser parte de tu historia de éxito </h2>
-            <p>
-                Calidad primero, propósito siempre. Eso es lo que nos
-                impulsa hoy y así es como llevamos la auditoría 
-                al futuro. Dirigido por personas que tienen la 
-                pasión y las habilidades para marcar la diferencia.
-                Y mejorado por una poderosa tecnología. 
-                Descubra cómo estamos reimaginando lo posible 
-                para usted y para su empresa. ¡Contáctanos!
-            </p>
-            <img src="/Prueba_pwc/img/Servicios_integrales/home-sec-1.webp" alt="">
+            <div class="contenedor_abajo">
+                <h2> Permítenos ser parte de tu historia de éxito </h2>
+                <p>
+                    Calidad primero, propósito siempre. Eso es lo que nos
+                    impulsa hoy y así es como llevamos la auditoría 
+                    al futuro. Dirigido por personas que tienen la 
+                    pasión y las habilidades para marcar la diferencia.
+                    Y mejorado por una poderosa tecnología. 
+                    Descubra cómo estamos reimaginando lo posible 
+                    para usted y para su empresa. ¡Contáctanos!
+                </p>
+                <img src="/Prueba_pwc/img/Servicios_integrales/home-sec-1.webp" alt="">
+            </div>
             <div class="contenedor_form">
                 <p> ¿Hablamos? déjanos un mensaje </p>
                 <p> Déjanos tus datos y nuestro equipo se contactará
                     contigo durante el día.
                 </p>
                 <form action="">
-                    <div>
-                        <label for="">Nombre y Apellido</label>
+                    <div class="contenedor_input">
+                        <div class="contenedor_label">
+                            <svg class="icono_form" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 202.93 166.07">
+                                <path d="M150,235.64q-41.18,0-82.35,0c-7.81,0-14.06-2.74-17.5-10-3-6.42-1.5-12.29,3.16-17.45,11.84-13.11,26.92-21,43.53-25.93C138.19,170,179.06,171,219,188.46a81,81,0,0,1,27.14,19c4.84,5.2,6.95,11.06,4,17.76s-8.5,10.17-15.78,10.27c-13,.19-25.95.09-38.93.1ZM150.1,224h24.46c19.14,0,38.28.09,57.41-.13,2.14,0,5.37-1.35,6.06-3s-.68-4.9-2.21-6.28A95.69,95.69,0,0,0,221,203c-15.94-9.59-33.64-14-52-15.89-27.36-2.79-54.12-.34-79.7,10.5-9.71,4.11-18.69,9.48-25.71,17.53-1.24,1.41-2.45,4.28-1.81,5.52.82,1.62,3.44,2.48,5.44,3.26,1.16.45,2.63.1,4,.1Z" transform="translate(-48.53 -69.59)" fill="#030303"></path><path d="M149.93,145.46c-11.29-.45-21.24-4-29.5-11.74-15.31-14.3-15.6-37.15-.75-51.91,15.44-15.34,41.63-16.42,58.13-2.23,11,9.44,15.74,21.47,12.4,35.64-3.55,15.06-13.94,24.08-28.53,28.32C157.9,144.64,153.85,144.84,149.93,145.46Zm.73-64.19c-15.07-.45-28.36,10.66-29.09,24.32-.75,14.07,9.24,25.36,24.5,27.71,13.82,2.13,28-6.66,31.5-19.48C182,97.42,169.13,81.82,150.66,81.27Z" transform="translate(-48.53 -69.59)" fill="#050505"></path>
+                            </svg>
+                            <label for="">Nombre y Apellido</label>
+                        </div>
                         <input type="text" placeholder="Escribe tu nombre y apellido"><br><br>
                     </div>
-                    <div>
-                        <label for="">Empresa</label>
+                    <div class="contenedor_input">
+                        <div class="contenedor_label">
+                            <svg class="icono_form" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 202.94 174.62">
+                                <path d="M48.53,90.26H235.27c12.17,0,16.2,4,16.2,16q0,54.36,0,108.73c0,10.33-4.51,14.83-14.93,14.83q-86.61,0-173.21,0c-10.39,0-14.79-4.44-14.8-14.86q0-59.85,0-119.7ZM238.37,217.94V135.83h-177v82.11Zm.13-115.83H61.34v21.55H238.5Z" transform="translate(-48.53 -55.27)" fill="#050505"></path><path d="M188,78.48H175.47v-11h-50.9v11H112.11c0-4.56-.36-9,.09-13.41.54-5.25,5.56-9.5,11.73-9.58,17.28-.23,34.56-.28,51.84,0,7.58.12,12.1,5.33,12.23,12.89C188.05,71.64,188,74.94,188,78.48Z" transform="translate(-48.53 -55.27)" fill="#060606"></path>
+                            </svg>
+                            <label for="">Empresa</label>
+                        </div>
                         <input type="text" placeholder="Escribe el nombre de tu Empresa"><br><br>                    </div>
-                    <div>
-                        <label for="">Ciudad / Región </label>
+                    <div class="contenedor_input">
+                        <div class="contenedor_label">
+                            <svg class="icono_form" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 168.4 186.38">
+                                <path d="M154.61,247.28l-44.92-41.16c-4.29-3.93-8.52-8-12.89-11.79C53.23,156,65,89.5,121.32,67.18c34.14-13.52,73.83-4.64,97.31,21.07,25.75,28.2,27.42,69.37,1.42,97.32C199.74,207.4,176.67,226.67,154.61,247.28Zm-.24-16.65c16.78-15.37,33.2-30.41,49.6-45.47,2-1.8,3.87-3.67,5.64-5.65,19.51-21.95,21.57-52.24,5.22-76.32-17.93-26.41-54.42-37.38-86.7-26.07C81.26,93.55,68,148.91,103,183.23,119.47,199.39,136.92,214.59,154.37,230.63Z" transform="translate(-70.36 -60.9)" fill="#050505"></path><path d="M154.39,163.52c-18.75,0-32.67-15.76-29-32.82,3.22-15,19.54-24.36,36.2-20.83,15.19,3.22,24.83,17.17,21.89,31.7C180.93,154.1,168.45,163.52,154.39,163.52Zm.13-42.73c-9.36,0-17,6.76-17,15.27s7.58,15.57,16.78,15.65,17-7,17.06-15.4S163.83,120.83,154.52,120.79Z" transform="translate(-70.36 -60.9)" fill="#050505"></path>
+                            </svg>
+                            <label for="">Ciudad / Región</label>
+                        </div>
                         <input type="text" placeholder="Escribe el nombre de tu ciudad"><br><br>
                     </div>
-                    <div>
-                        <label for="">Correo Electrónico</label>
+                    <div class="contenedor_input">
+                        <div class="contenedor_label">
+                            <svg class="icono_form" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 203.2 139.68">
+                                <path d="M150,219.84q-42.93,0-85.87,0c-11.53,0-15.72-4.16-15.72-15.53q0-54.37,0-108.75c0-10.87,4.48-15.37,15.51-15.37q86.12,0,172.24,0c11,0,15.43,4.48,15.43,15.41q0,54.63,0,109.25c0,10.77-4.28,15-15.22,15Q193.19,219.86,150,219.84ZM61.36,208.08H238.64V119.53c-1.88.73-3.41,1.26-4.88,1.91-26.55,11.7-53.06,23.47-79.68,35a11,11,0,0,1-7.83.1c-26-11.2-51.94-22.69-77.9-34.09-2.22-1-4.47-1.86-7-2.9Zm-.16-116a100.78,100.78,0,0,0,.13,11.19,6.06,6.06,0,0,0,2.77,4.27q41.54,18.53,83.26,36.66a7.1,7.1,0,0,0,5.09.1q42-18.24,83.75-36.82a5.08,5.08,0,0,0,2.58-3.46c.33-3.91.12-7.86.12-11.94Z" transform="translate(-48.4 -80.16)" fill="#050505"></path>
+                            </svg>
+                            <label for="">Correo Electrónico</label>
+                        </div>
                         <input type="email" placeholder="Escribe tu correo electrónico"><br><br>
                     </div>
-                    <div>
-                        <label for="">Teléfono</label>
+                    <div class="contenedor_input">
+                        <div class="contenedor_label">
+                            <svg class="icono_form" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 203.07 186.27">
+                                <path d="M118.21,142.35l40.16,36.71c3.84-3.52,6.7-6.3,9.72-8.88,7.87-6.72,16.63-8.16,25.89-3.4,15.78,8.11,31.53,16.32,47.09,24.85,12.31,6.75,13.94,20.67,3.93,30.43-2,2-4.34,3.68-6.18,5.81-14.22,16.4-32.14,17.76-51.52,12.57-23.65-6.34-44.24-18.66-63.45-33.42-25.27-19.43-47.22-41.94-63.1-69.82C54,125.3,48.67,112.83,48.47,98.75,48.33,88.87,51.56,80.58,59.11,74c4.14-3.6,8-7.48,12.15-11.11,10.86-9.6,26.25-7.56,34,4.64q13,20.34,25.67,40.91c5.76,9.32,4.63,17.47-3.28,25.08C124.94,136.19,122.1,138.74,118.21,142.35Zm87.05,89,.53,1.35c5.45-2.06,11.38-3.36,16.21-6.4,5.12-3.23,9.3-8,13.72-12.28,4.58-4.44,4-9.66-1.62-12.69-15.33-8.26-30.78-16.3-46.22-24.34-4.13-2.14-8-1.49-11.44,1.76-2.78,2.63-5.54,5.3-8.49,7.72-5.27,4.35-11.94,5.23-17,.85q-21.37-18.66-41.87-38.31c-4.61-4.4-3.87-11,.67-15.63,2.79-2.85,5.84-5.45,8.77-8.15,3.42-3.15,4-6.62,1.47-10.66C111.35,100.86,102.79,87,94,73.32,90.36,67.58,84.9,67,79.72,71.61,76,74.91,72.5,78.52,68.65,81.68c-6.3,5.17-8,11.89-7.37,19.61,1,11.35,5.37,21.54,11.11,31.12,22.88,38.19,54.8,66.82,94.07,87.38C178.57,226.13,191.33,230.86,205.26,231.39Z" transform="translate(-48.47 -56.87)" fill="#050505"></path>
+                            </svg>
+                            <label for="">Teléfono</label>
+                        </div>
                         <input type="tel" placeholder="Escribe tu número de teléfono o celular"><br><br>
                     </div>
-                    <div>
-                        <label for="">¿Cómo podemos ayudarte?</label>
+                    <div class="contenedor_input">
+                        <div class="contenedor_label">
+                            <svg class="icono_form" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 155.78 179.45">
+                                <path d="M205.45,216.52c0,3.74,0,7.19,0,10.65,0,7.5-5.08,12.55-12.61,12.55h-108c-7.56,0-12.65-5-12.66-12.49q0-66.91,0-133.81c0-7.53,5.1-12.5,12.64-12.54,3.2,0,6.4,0,9.78,0V73.23c0-8.06,4.87-13,12.89-13H215c8,0,12.92,4.85,12.92,12.92q0,52.41,0,104.83c0,8.64,0,17.29,0,25.93-.05,7.62-5,12.52-12.57,12.56-2.62,0-5.25,0-7.87,0ZM105.9,205.07h1.89q53.4,0,106.79,0c1.69,0,2.07-.5,2.07-2.11q-.06-64.67,0-129.33c0-1.75-.52-2.16-2.21-2.16q-53.22.08-106.44,0c-1.86,0-2.29.54-2.29,2.31q.08,64.48,0,129C105.75,203.49,105.84,204.19,105.9,205.07ZM94.55,92.24c-3.1,0-6,.11-8.91,0-1.79-.09-2.31.4-2.3,2.25q.07,65.84,0,131.67c0,1.73.48,2.19,2.2,2.19q53.22-.08,106.45,0h2.09V216.44H108c-8.72,0-13.43-4.74-13.43-13.52V92.24Z" transform="translate(-72.11 -60.27)"></path><path d="M199.73,98.18v11.1h-77V98.18Z" transform="translate(-72.11 -60.27)"></path><path d="M199.73,132.18v11.09h-77V132.18Z" transform="translate(-72.11 -60.27)"></path><path d="M122.65,177.33V166.18h44.71v11.15Z" transform="translate(-72.11 -60.27)"></path>
+                            </svg>
+                            <label for="">¿Cómo podemos ayudarte?</label>
+                        </div>
                         <select>
-                            <option value="Option 1">Option 1</option>
-                            <option value="Option 2">Option 2</option>
-                            <option value="Option 3">Option 3</option>
+                            <option value="Option 1">Elíge uno</option>
+                            <option value="Option 2">Revisoría Fiscal y Auditoría Externa</option>
+                            <option value="Option 3">Consultoría contable</option>
+                            <option value="Option 4">Servicio de Aseguramiento de Riesgos(RAS)</option>
+                            <option value="Option 5">Auditorias Especiales</option>
                         </select><br><br>
                     </div>
-
-                    <div>
-                        <label for="">Mensaje</label>
-                        <input type="textarea" placeholder="Escribe aqui tu mensaje"><br><br>
+                    <div class="contenedor_input">
+                        <div class="contenedor_label">
+                            <svg class="icono_form" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 203.2 184.05">
+                                <path d="M73.05,242c0-14.83.07-28.76-.09-42.68A9,9,0,0,0,71,193.63C32.66,154,44.28,91.53,96.76,66.77c12.2-5.76,25-9,38.53-8.78,15.76.29,31.92-.8,47.18,2.31,34.23,7,58.23,27.14,66.93,61.93,8.62,34.5-8.63,69.52-41.63,87.22a90.23,90.23,0,0,1-44.47,11.12c-15.93-.22-32,1.41-47.74-2.35-1.43-.34-3.43.8-4.92,1.67C98.33,227.06,86.08,234.34,73.05,242Zm12.66-21.48c8.3-4.92,15.66-9.37,23.12-13.63,1.47-.83,3.59-1.64,5-1.21,15.82,4.61,32,3,48.1,3.18,17.47.21,33.62-4.42,47.63-14.92,22-16.49,32.71-38.34,27.84-65.93-4.83-27.38-22.15-45.27-47.86-53.7-24.79-8.13-50.85-7.76-75.78-1.06-27.48,7.39-45.89,25.78-51.43,54.49-4.55,23.52,3.5,43.41,20.17,60.22a11.8,11.8,0,0,1,3,7.19C85.94,203.27,85.71,211.39,85.71,220.55Z" transform="translate(-48.4 -57.97)" fill="#060606"></path>
+                            </svg>
+                            <label for="">Mensaje</label>
+                        </div>
+                        <textarea placeholder="Escribe aqui tu mensaje"></textarea><br><br>
                     </div>               
-                    <input type="checkbox"><span> Acepto los Términos y Condiciones</span><br><br>
+                    <input type="checkbox"><span> Acepto los <strong>Términos y Condiciones</strong></span><br><br>
                     <input type="submit" value="Enviar">
                 </form>
             </div>
